@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+[BUG FIXES]
+
+- The value returned by Courriel::Part::Single->content() was not decoded to
+  Perl's native UTF-8 character set. Similarly, when encoding content for
+  transfer, it was not first transformed to raw bytes.
+
+
 0.11     2011-06-07
 
 [BUG FIXES]
